DEVOPS/kairos02/citas/int/middleware/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfmng-mdw
  namespace: p1042
spec:
  replicas: 2
  selector:
    matchLabels:
      app: selfmng-mdw
  template:
    metadata:
      labels:
        app: selfmng-mdw
    spec:
      containers:
        - name: container
          image: docker-p1042.opentrends.net/appointment-middleware:0.3.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: hazelcast
              containerPort: 5701
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 18
          resources:
            requests:
              cpu: 512m
              memory: 1Gi
            limits:
              cpu: 1
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-nexus-p1042
