DEVOPS/kairos02/citas/int/middleware/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selfmng-mdw-svc
  namespace: p1042
spec:
  selector:
      app: selfmng-mdw
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: hazelcast
      protocol: TCP
      port: 5701
      targetPort: hazelcast
